# compus-news

./: .gitignore  Makefile  README.md  docker-compose.yml
.trae/documents/: campus_news_plan.md  enterprise_optimization_plan.md  project_problems_plan.md
03-前端项目代码/xwzx-news/: index.html  vite.config.js
03-前端项目代码/xwzx-news/src/: main.js  style.css
03-前端项目代码/xwzx-news/src/api/: index.js
03-前端项目代码/xwzx-news/src/i18n/: index.js
03-前端项目代码/xwzx-news/src/router/: index.js
backend/: .env.example  main.py
backend/config/: cache_conf.py  db_conf.py  settings.py
backend/models/: news.py
backend/routers/: chat.py  health.py  image.py  users.py
backend/schemas/: users.py
backend/tests/: test_security.py
backend/utils/: jwt.py  logger.py  rate_limit.py  security.py
docs/: campus_data.sql
frontend/: Dockerfile  nginx.conf
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/store/: theme.js  user.js
frontend/src/views/: Chat.vue  Home.vue  NewsDetail.vue  Register.vue
toutiao_backend/: Dockerfile  check_db.py  main.py  pyproject.toml  requirements.txt  run_sql.py
toutiao_backend/cache/: news_cache.py
toutiao_backend/config/: cache_conf.py  db_conf.py  settings.py
toutiao_backend/crud/: history.py  news_cache.py  users.py
toutiao_backend/models/: __init__.py  favorite.py  history.py  users.py
toutiao_backend/routers/: chat.py  favorite.py  history.py  image.py  news.py  users.py
toutiao_backend/schemas/: users.py
toutiao_backend/tests/: test_jwt.py
toutiao_backend/utils/: auth.py  logger.py  request_id.py
(+8 files in other folders)
